--- a/blogengine/blog/templates/blog/posts_list.html
+++ b/blogengine/blog/templates/blog/posts_list.html
@@ -7,16 +7,7 @@
 {% block content %}
     
     {% for post in posts %}
-        <div class="card mb-4">
-            <div class="card-header">
-            {{ post.date_pub }}
-            </div>
-            <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.body|truncatewords:15 }}</p>
-            <a href="{{ post.get_absolute_url }}" class="btn" style="background-color: #e3f2fd;">Read</a>
-            </div>
-        </div>
+        {% include 'blog/includes/post_card_template.html' %}
     {% endfor %}
 
 {% endblock content %}  
