--- a/blogengine/templates/base.html
+++ b/blogengine/templates/base.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="{% url 'posts_list_url' %}">Posts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="{% url 'tags_list_url' %}">Tags</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
