--- a/blogengine/blog/templates/blog/tags_list.html
+++ b/blogengine/blog/templates/blog/tags_list.html
@@ -9,7 +9,9 @@
 
     {% for tag in tags %}
         <div class="">
-            <h3>{{ tag.title }}</h3>
+            <h3>
+                <a href="{{ tag.get_absolute_url }}">{{ tag.title }}</a>
+            </h3>
         </div>
     {% endfor %}
 {% endblock content %}
