--- a/blogengine/blog/templates/blog/posts_list.html
+++ b/blogengine/blog/templates/blog/posts_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     
-    {% for post in posts %}
+    {% for post in page.object_list %}
         {% include 'blog/includes/post_card_template.html' %}
     {% endfor %}
 
