--- a/blogengine/templates/base.html
+++ b/blogengine/templates/base.html
@@ -1,13 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <title>
-        {% block title %}
-            | ТК Тропосфера
-        {% endblock title %}
+      {% block title %}
+          | ТК Тропосфера
+      {% endblock title %}
     </title>
 </head>
 <body>
@@ -27,10 +31,12 @@
               <a class="nav-link" href="{% url 'tags_list_url' %}">Tags</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search">
+
+          <form class="form-inline my-2 my-lg-0" action="{% url 'posts_list_url' %}">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" name="search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
+
         </div>
     </nav>
 
@@ -40,9 +46,41 @@
                 {% block content %}
 
                 {% endblock content %}
+
+                <nav aria-label="...">
+                  <ul class="pagination">
+                    <li class="page-item {% if not prev_page_url %} disabled {% endif %}">
+                      <a class="page-link" href="{{ prev_page_url }}" tabindex="-1" aria-disabled="true">Previous</a>
+                    </li>
+
+                    {% for n in page.paginator.page_range %}
+
+                      {% if page.number == n %}
+                        <li class="page-item active" aria-current="page">
+                          <a class="page-link" href="?page={{ n }}">{{ n }} <span class="sr-only">(current)</span></a>
+                        </li>
+                      {% elif n > page.number|add:-2 and n < page.number|add:2 %}
+                        <li class="page-item">
+                          <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+                        </li>
+                      {% endif %}
+                    {% endfor %}
+
+                    <li class="page-item {% if not next_page_url %} disabled {% endif %}">
+                      <a class="page-link" href="{{ next_page_url }}">Next</a>
+                    </li>
+                  </ul>
+                </nav>
+
             </div>
         </div>
     </div>
 
-</body>
+    {% if request.user.is_authenticated and request.user.is_staff %}
+      {% block admin-panel %}
+        text
+      {% endblock admin-panel %}
+    {% endif %}
+
+</body> 
 </html>
